--- a/index.html
+++ b/index.html
@@ -413,7 +413,19 @@
                         </a>
                     </li>
                 </ul>                 
-            </div>        
+            </div>
+            <form class="footer-form">
+                <p class="footer-modal-title">Подпишитесь на рассылку</p>
+                <div class="footer-form-div">
+                    <input class="footer-form-input" type="email" placeholder="E-mail" name="user-email" required>
+                <button type="submit" class="footer-form-button">
+                    Подписаться
+                    <svg class="footer-modal-svg" width="24" height="24">
+                        <use href="./images/icons.svg#icon-subscribe"></use>
+                    </svg>
+                </button>
+                </div>
+            </form>
         </div>
     </footer>
     
